[B]1.0.0[/B]
- Első verzió