@@ -1,2 +1,5 @@
+[B]1.0.1[/B]
+- Lapozás megvalósításának megkezdése
+
 [B]1.0.0[/B]
 - Első verzió
